--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,30 @@
 server.port=9000
 
+# ??? ??? ??
+
+# ??? ?? ??? ??? ?? ????? ??(?? ???? ?? ??)
+spring.security.oauth2.client.registration.naver.client-name=naver
+# ????? ???? ????? ID
+spring.security.oauth2.client.registration.naver.client-id=KUl9Ic_7y7M1rpkizdgs
+# ????? ???? ????? ??? (???)
+spring.security.oauth2.client.registration.naver.client-secret=JJOS2kRyMs
+# ??? ??? ?? ? ?????? URI (??? ??? ??? ??? URI? ???? ?)
+spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:9000/login/oauth2/code/naver
+# ?? ??? ??(authorization_code? OAuth2? ?? ?? ?? ??? ??)
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+# ??????? ?????? ??? ??(??? ?? ??: ??, ???)
+spring.security.oauth2.client.registration.naver.scope=name,email
+
+# ???? OAuth 2.0 ?? URL (???? ???? ?? ???? URL)
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+# ???? OAuth 2.0 ?? ?? URL (?? ? ??? ??? ?? ?? URL)
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+# ???? ??? ?? API URL (???? ??? ??? ???? ? ??)
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+# ??? ?? ???? ??? ?? ??? ?? ??? ?? (response ?? ? ??? ??? ??)
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+
 
 
 
